// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textOverlineStyle renders 0 1`] = `
Array [
  .c0 {
  text-overline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders function 1`] = `
Array [
  .c0 {
  text-overline-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  text-overline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders negative number 1`] = `
Array [
  .c0 {
  text-overline-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-overline-style: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-style: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-style: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-style: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-overline-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-overline-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overline-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overline-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-overline-style: July;
}

@media May {
  .c0 {
    text-overline-style: August;
  }
}

@media April {
  .c0 {
    text-overline-style: September;
  }
}

@media January {
  .c0 {
    text-overline-style: November;
  }
}

@media April {
  .c0 {
    text-overline-style: August;
  }
}

@media June {
  .c0 {
    text-overline-style: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: July;
}

@media May {
  .c0 {
    text-overline-style: August;
  }
}

@media April {
  .c0 {
    text-overline-style: September;
  }
}

@media January {
  .c0 {
    text-overline-style: November;
  }
}

@media April {
  .c0 {
    text-overline-style: August;
  }
}

@media June {
  .c0 {
    text-overline-style: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-style: November;
  }
}

@media April {
  .c0 {
    text-overline-style: January;
  }
}

@media January {
  .c0 {
    text-overline-style: December;
  }
}

@media April {
  .c0 {
    text-overline-style: April;
  }
}

@media June {
  .c0 {
    text-overline-style: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-style: November;
  }
}

@media April {
  .c0 {
    text-overline-style: January;
  }
}

@media January {
  .c0 {
    text-overline-style: December;
  }
}

@media April {
  .c0 {
    text-overline-style: April;
  }
}

@media June {
  .c0 {
    text-overline-style: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-overline-style: July;
  }
}

@media April {
  .c0 {
    text-overline-style: August;
  }
}

@media January {
  .c0 {
    text-overline-style: September;
  }
}

@media April {
  .c0 {
    text-overline-style: November;
  }
}

@media June {
  .c0 {
    text-overline-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-overline-style: July;
  }
}

@media April {
  .c0 {
    text-overline-style: August;
  }
}

@media January {
  .c0 {
    text-overline-style: September;
  }
}

@media April {
  .c0 {
    text-overline-style: November;
  }
}

@media June {
  .c0 {
    text-overline-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-style: January;
  }
}

@media April {
  .c0 {
    text-overline-style: December;
  }
}

@media January {
  .c0 {
    text-overline-style: April;
  }
}

@media April {
  .c0 {
    text-overline-style: May;
  }
}

@media June {
  .c0 {
    text-overline-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overline-style: January;
  }
}

@media April {
  .c0 {
    text-overline-style: December;
  }
}

@media January {
  .c0 {
    text-overline-style: April;
  }
}

@media April {
  .c0 {
    text-overline-style: May;
  }
}

@media June {
  .c0 {
    text-overline-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders postitive number 1`] = `
Array [
  .c0 {
  text-overline-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders string 1`] = `
Array [
  .c0 {
  text-overline-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverlineStyle renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textOverlineStyle renders valid theme path 1`] = `
Array [
  .c0 {
  text-overline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
